--- a/css/style.css
+++ b/css/style.css
@@ -1,41 +1,354 @@
-/*
-Error: Invalid CSS after "    .footer-sub": expected "{", was "}"
-        on line 454 of C:\Users\shuun\Desktop\Dev\Engo\lebe\shuunguyen2k.github.io\scss\style.scss
+html {
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
+}
 
-449:             }
-450:         }
-451:     }
-452: 
-453:     .footer-sub
-454: }
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
 
-Backtrace:
-C:\Users\shuun\Desktop\Dev\Engo\lebe\shuunguyen2k.github.io\scss\style.scss:454
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:1278:in `expected'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:1208:in `expected'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:1203:in `tok!'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:677:in `block'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:747:in `declaration_or_ruleset'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:697:in `block_child'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:689:in `block_contents'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:678:in `block'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:670:in `ruleset'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:696:in `block_child'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:689:in `block_contents'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:137:in `stylesheet'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/scss/parser.rb:41:in `parse'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/engine.rb:414:in `_to_tree'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/engine.rb:389:in `_render_with_sourcemap'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/engine.rb:307:in `render_with_sourcemap'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/exec/sass_scss.rb:391:in `run'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/exec/sass_scss.rb:63:in `process_result'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/exec/base.rb:52:in `parse'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/exec/base.rb:19:in `parse!'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/bin/sass:13:in `<top (required)>'
-C:/Program Files (x86)/Koala/bin/sass:22:in `load'
-C:/Program Files (x86)/Koala/bin/sass:22:in `<main>'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Invalid CSS after \"    .footer-sub\": expected \"{\", was \"}\"\A         on line 454 of C:\Users\shuun\Desktop\Dev\Engo\lebe\shuunguyen2k.github.io\scss\style.scss\A \A 449:             }\A 450:         }\A 451:     }\A 452: \A 453:     .footer-sub\A 454: }"; }
+html {
+  font-size: 62.5%;
+  line-height: 1.6rem;
+}
+
+body {
+  margin: 0;
+}
+
+a {
+  color: inherit;
+}
+a:hover, a:focus {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+}
+
+#header {
+  color: #ffffff;
+  height: 465px;
+  background: url("../images/banner.png") no-repeat center/cover;
+}
+#header .header-main-inner {
+  border-bottom: 1px solid #c1c1c1;
+}
+#header .header-main-inner .header-topbar {
+  font-size: 1.6rem;
+  text-align: center;
+  position: relative;
+  height: 45px;
+  background-color: #84bdbe;
+}
+#header .header-main-inner .header-topbar .header-container {
+  padding: 0 5rem;
+}
+#header .header-main-inner .header-topbar .header-container span {
+  position: absolute;
+  top: 1rem;
+  right: 6.5%;
+  cursor: pointer;
+}
+#header .header-main-inner .header-wrap-stick {
+  position: relative;
+}
+#header .header-main-inner .header-wrap-stick .sticky-wrapper {
+  padding: 3rem 6.5%;
+}
+#header .header-main-inner .header-wrap-stick .sticky-wrapper .header-search-box form {
+  position: relative;
+}
+#header .header-main-inner .header-wrap-stick .sticky-wrapper .header-search-box form .search-fields .search-field {
+  width: 35rem;
+  height: 5rem;
+  max-width: 100%;
+  border: none;
+  outline: none;
+  border-radius: 999px;
+  padding: 0 2rem 0 5rem;
+  font-size: 1.4rem;
+  color: #868686;
+  background-color: #f8f8f8;
+}
+#header .header-main-inner .header-wrap-stick .sticky-wrapper .header-search-box form .search-fields .search-submit {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 5rem;
+  height: 5rem;
+  border: none;
+  outline: none;
+  font-size: 2rem;
+  color: #000000;
+  background: transparent;
+}
+#header .header-main-inner .header-wrap-stick .sticky-wrapper .header-menu .nav-item {
+  margin: 0 3.7%;
+}
+#header .header-main-inner .header-wrap-stick .sticky-wrapper .header-menu .nav-item:first-child {
+  margin-left: 0;
+}
+#header .header-main-inner .header-wrap-stick .sticky-wrapper .header-menu .nav-item:last-child {
+  margin-right: 0;
+}
+#header .header-main-inner .header-wrap-stick .sticky-wrapper .header-menu .nav-item a {
+  font-size: 1.4rem;
+  font-weight: 700;
+  letter-spacing: 0.2rem;
+  text-transform: uppercase;
+  position: relative;
+}
+#header .header-main-inner .header-wrap-stick .sticky-wrapper .header-menu .nav-item a:hover {
+  color: #e5b72d;
+}
+#header .header-main-inner .header-wrap-stick .sticky-wrapper .header-control-wrap .currency-language-wrap .currency-language {
+  position: relative;
+}
+#header .header-main-inner .header-wrap-stick .sticky-wrapper .header-control-wrap .currency-language-wrap .currency-language a {
+  display: inline-block;
+  position: relative;
+  letter-spacing: 0.2rem;
+  text-transform: uppercase;
+  color: #000000;
+}
+#header .header-main-inner .header-wrap-stick .sticky-wrapper .header-control-wrap .currency-language-wrap .currency-language .currency {
+  min-width: 8rem;
+  height: 3.6rem;
+  padding: 0.8rem 2.4rem 0.8rem 1.6rem;
+  border: 1px solid #ffffff;
+  border-radius: 999px;
+}
+#header .header-main-inner .header-wrap-stick .sticky-wrapper .header-control-wrap .currency-language-wrap .currency-language .currency i {
+  position: absolute;
+  top: 1.2rem;
+  right: 1.4rem;
+  color: #ffffff;
+}
+#header .header-main-inner .header-wrap-stick .sticky-wrapper .header-control-wrap .block-account {
+  margin-left: 3rem;
+}
+#header .header-main-inner .header-wrap-stick .sticky-wrapper .header-control-wrap .block-account a {
+  font-size: 2.4rem;
+}
+#header .header-main-inner .header-wrap-stick .sticky-wrapper .header-control-wrap .lebe-minicart {
+  margin-left: 3rem;
+  margin-right: 2rem;
+  position: relative;
+}
+#header .header-main-inner .header-wrap-stick .sticky-wrapper .header-control-wrap .lebe-minicart .flaticon-bag {
+  font-size: 2.4rem;
+}
+#header .header-main-inner .header-wrap-stick .sticky-wrapper .header-control-wrap .lebe-minicart .minicart-number {
+  position: absolute;
+  font-size: 1.2rem;
+  width: 2.2rem;
+  height: 2.2rem;
+  line-height: 2.2rem;
+  border-radius: 50%;
+  background: #e5b72d;
+  text-align: center;
+  transform: translateY(-50%);
+}
+#header .header-breadcrumb {
+  position: absolute;
+  top: 27.5rem;
+  width: 100%;
+  text-align: center;
+}
+#header .header-breadcrumb .content-banner .title-page {
+  font-size: 6rem;
+  font-weight: 300;
+}
+#header .header-breadcrumb .content-banner nav {
+  font-size: 14px;
+}
+#header .header-breadcrumb .content-banner nav a:hover {
+  color: #e5b72d;
+}
+
+#main {
+  padding: 3.2rem 12.75%;
+}
+#main .main-content .toolbar-top {
+  margin-bottom: 3rem;
+}
+#main .main-content .toolbar-top .part-wrap {
+  width: 50%;
+  display: inline-block;
+}
+#main .main-content .toolbar-top .part-filter-wrap .action-wrap {
+  float: left;
+}
+#main .main-content .toolbar-top .part-filter-wrap .action-wrap a {
+  font-size: 14px;
+  color: #000000;
+  font-weight: 700;
+  letter-spacing: 0.2rem;
+  background: #f0f0f0;
+  position: relative;
+  text-transform: uppercase;
+  line-height: 36px;
+  padding: 0 1.5rem 0 6rem;
+  border-radius: 999px;
+  display: inline-block;
+}
+#main .main-content .toolbar-top .part-filter-wrap .action-wrap a i {
+  width: 50px;
+  height: 50px;
+  line-height: 52px;
+  text-align: center;
+  background: #e5b72d;
+  display: inline-block;
+  border-radius: 50%;
+  position: absolute;
+  left: 0;
+  top: -20%;
+  color: #ffffff;
+}
+#main .main-content .toolbar-top .part-action-right-wrap {
+  float: right;
+}
+#main .main-content .toolbar-top .part-action-right-wrap .commerce-ordering {
+  float: right;
+  width: 20rem;
+  border: 1px solid #cfcfcf;
+  overflow: hidden;
+}
+#main .main-content .toolbar-top .part-action-right-wrap .commerce-ordering .orderby {
+  width: calc(100% - 0.8rem);
+  height: 4rem;
+  border: none;
+  padding-left: 1.6rem;
+  font-size: 1.4rem;
+  color: #868686;
+  outline: none;
+}
+#main .main-content .toolbar-top .part-action-right-wrap .commerce-ordering .orderby option {
+  padding: 5px 21px;
+  height: 30px;
+  line-height: 30px;
+}
+#main .main-content .toolbar-top .part-action-right-wrap .products-sizes {
+  float: right;
+  line-height: 4rem;
+}
+#main .main-content .toolbar-top .part-action-right-wrap .products-sizes a svg {
+  margin-right: 2.4rem;
+}
+#main .main-content .toolbar-top .part-action-right-wrap .products-sizes a.active, #main .main-content .toolbar-top .part-action-right-wrap .products-sizes a:hover {
+  stroke: #e5b72d;
+  fill: #e5b72d;
+}
+#main .main-content .main-product .product-item {
+  margin-bottom: 4rem;
+}
+#main .main-content .main-product .product-item .p-image {
+  margin-bottom: 2rem;
+}
+#main .main-content .main-product .product-item .p-info {
+  font-size: 1.6rem;
+}
+#main .main-content .main-product .product-item .p-info .p-title {
+  font-weight: 500;
+  color: #8e8e8e;
+  margin-bottom: 1rem;
+}
+#main .main-content .main-product .product-item .p-info .p-price {
+  font-weight: 700;
+  color: #000000;
+}
+#main .main-content .main-product .pagination li {
+  padding-right: 1rem;
+  width: 4rem;
+  height: 4rem;
+  text-align: center;
+}
+#main .main-content .main-product .pagination li a {
+  font-size: 1.6rem;
+  font-weight: 600;
+  color: #868686;
+  background: #ffffff;
+  border-color: #cfcfcf;
+}
+#main .main-content .main-product .pagination li.active a, #main .main-content .main-product .pagination li:hover a {
+  color: #000000;
+  border-color: #000000;
+}
+
+#footer {
+  background: #000000;
+}
+#footer .footer-main-inner {
+  padding: 5rem 12.75%;
+  border-bottom: 1px solid #2b2b2b;
+  font-size: 1.4rem;
+}
+#footer .footer-main-inner .menu-footer .widget-title {
+  color: #efefef;
+  padding-bottom: 1.5rem;
+  margin-bottom: 1rem;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+}
+#footer .footer-main-inner .menu-footer .nav {
+  display: block;
+  padding: 1rem 0;
+}
+#footer .footer-main-inner .menu-footer .nav .nav-item {
+  color: #868686;
+}
+#footer .footer-main-inner .footer-logo {
+  border-left: 1px solid #2b2b2b;
+  border-right: 1px solid #2b2b2b;
+}
+#footer .footer-main-inner .newsletter-inner .newsletter-top {
+  text-align: center;
+}
+#footer .footer-main-inner .newsletter-inner .newsletter-top .newsletter-title {
+  font-size: 1.8rem;
+  font-weight: 600;
+  color: #efefef;
+  margin-bottom: 2rem;
+}
+#footer .footer-main-inner .newsletter-inner .newsletter-top .newsletter-desc {
+  font-size: 1.4rem;
+  color: #868686;
+  margin-bottom: 3rem;
+}
+#footer .footer-main-inner .newsletter-inner form {
+  position: relative;
+  width: 70.22%;
+}
+#footer .footer-main-inner .newsletter-inner form input {
+  border: 2px solid #3a3a3a;
+  background: none;
+  border-right: none;
+  color: #868686;
+  height: 56px;
+  line-height: 52px;
+  width: 100%;
+  padding: 2rem;
+  font-size: 1.4rem;
+}
+#footer .footer-main-inner .newsletter-inner form button {
+  font-size: 1.2rem;
+  color: #000000;
+  background: #e5b72d;
+  font-weight: 800;
+  height: 100%;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  padding: 0 20px;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+#footer .footer-sub {
+  padding: 2rem 12.75%;
+}
+
+/*# sourceMappingURL=style.css.map */
