--- a/css/style.css
+++ b/css/style.css
@@ -350,5 +350,22 @@ img {
 #footer .footer-sub {
   padding: 2rem 12.75%;
 }
+#footer .footer-sub .socials-inner .socials .social-item {
+  min-width: 45px;
+  height: 45px;
+  font-size: 18px;
+  line-height: 43px;
+  border-radius: 50%;
+  margin-right: 10px;
+  text-align: center;
+  display: inline-block;
+  position: relative;
+  border: 2px solid #2b2b2b;
+  color: #8b8b8b;
+}
+#footer .footer-sub .copyright {
+  font-size: 1.3rem;
+  color: #454545;
+}
 
 /*# sourceMappingURL=style.css.map */
