--- a/scss/style.scss
+++ b/scss/style.scss
@@ -453,6 +453,29 @@ img {
     .footer-sub {
         padding: 2rem 12.75%;
 
-        
+        .socials-inner {
+            .socials {
+                .social-item {
+                    min-width: 45px;
+                    height: 45px;
+                    font-size: 18px;
+                    line-height: 43px;
+                    border-radius: 50%;
+                    margin-right: 10px;
+                    text-align: center;
+                    display: inline-block;
+                    position: relative;
+                    // z-index: 1;
+                    // margin-bottom: 7px;
+                    border: 2px solid #2b2b2b;
+                    color: #8b8b8b;
+                }
+            }
+        }
+
+        .copyright {
+            font-size: 1.3rem;
+            color: #454545;
+        }
     }
 }
